crates/stylex-shared/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/fold__evaluation__stylex_evaluation__import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__importing_file_with_stylex_suffix_works_with_keyframes.snap
---
source: crates/stylex-shared/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { MyTheme } from 'otherFile.stylex';
_inject2({
    ltr: "@keyframes __hashed_var__1cb153o-B{from{color:var(--__hashed_var__1jqb1tb);}}",
    priority: 0
});
export const fade = "__hashed_var__1cb153o-B";
_inject2({
    ltr: ".__hashed_var__1xwo6t1{animation-name:__hashed_var__1cb153o-B}",
    priority: 3000
});
"__hashed_var__1xwo6t1";
